[package]
name = "CrackPulse"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
csv = "1.3.1"
dotenv = "0.15.0"
rayon = "1.10.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
ssh2 = "0.9.5"
termion = "4.0.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
winapi = { version = "0.3.9", features = ["winbase", "winnt"] }
